# Build_Your_Parser

./: CMakeLists.txt  LICENSE  README.md  setup.bat
.github/workflows/: cmake-single-platform.yml
include/: App.h  Context.h  Subcommand.h
src/: App.cpp  Context.cpp  ContextBuilder.cpp  Option.cpp  Subcommand.cpp  Token.cpp
src/stage1/: README.md  Token.cpp  validate.bat
src/stage2/: Parser.cpp  README.md  validate.bat
src/stage3/: Option.cpp  README.md  Subcommand.cpp  validate.bat
src/stage4/: Context.cpp  ContextBuilder.cpp  README.md  validate.bat
src/stage5/: App.cpp  README.md  validate.bat
tests/: CMakeLists.txt
tests/src/: Stage1_Tests.cpp  Stage2_Tests.cpp  Stage3_Tests.cpp  Stage3_tests.cpp  Stage4_Tests.cpp  Stage4_tests.cpp  Stage5_tests.cpp
